Fixed the overflowing button issue

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -130,10 +130,12 @@ h2 {
 		}
 		input {
 			flex-grow: 3;
+			margin-right: -16px;
 		}
 		button {
 			flex-grow: 1.5;
 			background: lighten($baseColor, 25%);;
+			margin-left: -16px;
 		}
 	}
 }
